Add build configuration with no runtime compilation

--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -44,10 +44,30 @@ jobs:
       run: msbuild -t:restore,build /p:Configuration=Release /p:Platform=x64
       shell: cmd
 
+  # Build the whole ComputeSharp solution with /p:DisableShaderCompilationSupport=True
+  build-solution-release-no-dynamic:
+    runs-on: windows-2022
+    steps:
+    - name: Git checkout
+      uses: actions/checkout@v2
+    - name: Add msbuild to PATH
+      uses: microsoft/setup-msbuild@v1.0.3
+    - name: Setup .NET Core 3.1 SDK
+      uses: actions/setup-dotnet@v1
+      with:
+        dotnet-version: 3.1.x
+    - name: Setup .NET 6 SDK
+      uses: actions/setup-dotnet@v1
+      with:
+        dotnet-version: 6.0.x
+    - name: Build
+      run: msbuild -t:restore,build /p:Configuration=Release /p:Platform=x64 /p:DisableShaderCompilationSupport=True
+      shell: cmd
+
   # Run all the unit tests referencing the ComputeSharp project directly
   run-tests:
     if: success()
-    needs: [build-solution-debug, build-solution-release]
+    needs: [build-solution-debug, build-solution-release, build-solution-release-no-dynamic]
     runs-on: windows-2022
     steps:
     - name: Git checkout
@@ -151,7 +171,7 @@ jobs:
   # This workflow also uploads the resulting package as an artifact.
   build-package:
     if: success()
-    needs: [build-solution-debug, build-solution-release]
+    needs: [build-solution-debug, build-solution-release, build-solution-release-no-dynamic]
     runs-on: windows-2022
     steps:
     - name: Git checkout
